tests/errors/semantic/blocking/str_join.py
# Can't find method join in class string
# pylint: disable=missing-function-docstring, missing-module-docstring
a = " ".join(["boy","girl"])
